Bvv Fix live transforms and minor improvements
- fix deprecated API calls
- Add GUI controls for scale bar bar, bounding boxes, and text overlay
- misc