@@ -8,12 +8,12 @@
  * it under the terms of the GNU General Public License as
  * published by the Free Software Foundation, either version 3 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public
  * License along with this program. If not, see
  * <http://www.gnu.org/licenses/gpl-3.0.html>.
@@ -41,22 +41,19 @@ import java.util.List;
  *
  * <p>This is particularly useful for:
  * <ul>
- *   <li>Multi-channel images where each channel is a separate BVV source but
+ *   <li>Multichannel images where each channel is a separate BVV source but
  *       should move together during manual registration (press {@code T} in BVV
  *       to enter manual transform mode).</li>
  *   <li>Multi-image workflows where multiple volumes must be grouped and
  *       manipulated as one.</li>
  * </ul>
  *
- * <p><b>Transform synchronization</b> can operate in two modes:
- * <ul>
- *   <li><b>Live (auto)</b>: a {@code renderTransformListeners} listener
- *       propagates each incremental transform to followers on every render
- *       frame. May cause visual lag on slow GPUs with many followers.</li>
- *   <li><b>Manual (triggered)</b>: {@link #syncTransforms()} is called
- *       explicitly (e.g., from a toolbar button) to apply the most recently
- *       cached leader transform to all followers.</li>
- * </ul>
+ * <p><b>Transform synchronization</b> is achieved by making all follower
+ * {@link TransformedSource}s share the leader's {@code fixedTransform} and
+ * {@code incrementalTransform} field objects via reflection. This means any
+ * transform applied to the leader, including live T-mode (press {@code T})
+ * dragging: It is immediately visible on all followers with no listener overhead.
+ * If reflection fails, a {@code renderTransformListeners} fallback is used.</p>
  */
 public class BvvMultiSource {
 
@@ -86,34 +83,96 @@ public class BvvMultiSource {
         this(single, Collections.emptyList());
     }
 
-    // ── Transform synchronization ──────────────────────────────────────────
+    // Transform synchronization
 
     /**
-     * Installs a {@code renderTransformListeners} listener on the leader's
-     * viewer panel. The listener caches the leader's current fixed transform
-     * and, if {@link #liveSync} is enabled, immediately propagates it to all
-     * followers.
+     * Makes all follower {@link TransformedSource}s share the leader's
+     * {@code fixedTransform} and {@code incrementalTransform} field objects
+     * via reflection. After this call any transform applied to the leader
+     * including live T-mode dragging.
+     * <p>
+     * This is more robust than a {@code renderTransformListeners} callback
+     * because it avoids race conditions between the GL thread (renders) and
+     * the input thread (ManualTransformationEditor writes), and works
+     * regardless of which {@code TransformedSource} layer the editor targets.
+     * If reflection fails (e.g. field names change in a future BDV version)
+     * a render-listener fallback is installed automatically.
+     * </p>
      */
     private void installTransformListener() {
-        leader.getBvvHandle().getViewerPanel().renderTransformListeners().add(t -> {
-            // Cache the leader's per-source fixed transform (not the viewer transform)
-            getSourceTransform(leader, cachedLeaderTransform);
-            if (liveSync) {
-                applyToFollowers(cachedLeaderTransform);
+        final AffineTransform3D leaderFixed = getTransformField(leader, "fixedTransform");
+        final AffineTransform3D leaderIncremental = getTransformField(leader, "incrementalTransform");
+        if (leaderFixed != null && leaderIncremental != null) {
+            for (final BvvStackSource<?> follower : followers) {
+                setTransformField(follower, "fixedTransform",       leaderFixed);
+                setTransformField(follower, "incrementalTransform", leaderIncremental);
             }
+            SNTUtils.log("BvvMultiSource: transform fields shared across " + (1 + followers.size()) + " source(s)");
+        } else {
+            installRenderTransformFallback();
+        }
+    }
+
+    /**
+     * Fallback: installs a render-frame listener that propagates the leader's
+     * composed (fixed × incremental) transform to followers on commit.
+     * Used when reflection-based field sharing is unavailable.
+     */
+    private void installRenderTransformFallback() {
+        SNTUtils.log("BvvMultiSource: using render-listener fallback for transform sync");
+        leader.getBvvHandle().getViewerPanel().renderTransformListeners().add(t -> {
+            getSourceTransform(leader, cachedLeaderTransform);
+            if (liveSync) applyToFollowers(cachedLeaderTransform);
         });
     }
 
     /**
-     * Applies the most recently cached leader transform to all followers.
-     * Call this explicitly when {@link #liveSync} is {@code false}, e.g.
-     * from a "Sync Transforms" toolbar button.
+     * Reads the named transform field from the first {@link TransformedSource}
+     * in a {@link BvvStackSource}, or {@code null} if reflection fails.
+     */
+    private static AffineTransform3D getTransformField(final BvvStackSource<?> source,
+                                                       final String fieldName) {
+        final List<? extends SourceAndConverter<?>> sacs = source.getSources();
+        if (sacs == null || sacs.isEmpty()) return null;
+        final Object spim = sacs.getFirst().getSpimSource();
+        if (!(spim instanceof TransformedSource<?> ts)) return null;
+        try {
+            final java.lang.reflect.Field f = TransformedSource.class.getDeclaredField(fieldName);
+            f.setAccessible(true);
+            return (AffineTransform3D) f.get(ts);
+        } catch (final Exception e) {
+            SNTUtils.log("BvvMultiSource: could not access TransformedSource." + fieldName + ": " + e.getMessage());
+            return null;
+        }
+    }
+
+    /**
+     * Replaces the named transform field in the first {@link TransformedSource}
+     * of a follower with the supplied shared instance.
+     */
+    private static void setTransformField(final BvvStackSource<?> source,
+                                          final String fieldName,
+                                          final AffineTransform3D sharedTransform) {
+        final List<? extends SourceAndConverter<?>> sacs = source.getSources();
+        if (sacs == null || sacs.isEmpty()) return;
+        final Object spim = sacs.getFirst().getSpimSource();
+        if (!(spim instanceof TransformedSource<?> ts)) return;
+        try {
+            final java.lang.reflect.Field f = TransformedSource.class.getDeclaredField(fieldName);
+            f.setAccessible(true);
+            f.set(ts, sharedTransform);
+        } catch (final Exception e) {
+            SNTUtils.log("BvvMultiSource: could not set TransformedSource." + fieldName + ": " + e.getMessage());
+        }
+    }
+
+    /**
+     * Forces a repaint. With field-sharing active, followers already hold the
+     * same transform objects as the leader: this call just flushes the display.
+     * Called internally after transform commits in the fallback path.
      */
     public void syncTransforms() {
-        getSourceTransform(leader, cachedLeaderTransform);
-        applyToFollowers(cachedLeaderTransform);
         leader.getBvvHandle().getViewerPanel().requestRepaint();
-        SNTUtils.log("BvvMultiSource: transform synced to " + followers.size() + " follower(s)");
     }
 
     /**
@@ -161,7 +220,7 @@ public class BvvMultiSource {
         return liveSync;
     }
 
-    // ── Display property delegation ────────────────────────────────────────
+    // Display property delegation
 
     /**
      * Sets the display range for all sources in the group.
@@ -202,7 +261,7 @@ public class BvvMultiSource {
         leader.removeFromBdv();
     }
 
-    // ── Accessors ──────────────────────────────────────────────────────────
+    // Accessors
 
     /** @return the leader source */
     public BvvStackSource<?> getLeader() {
@@ -227,20 +286,20 @@ public class BvvMultiSource {
         return 1 + followers.size();
     }
 
-    // ── Helpers ────────────────────────────────────────────────────────────
+    // Helpers
 
     /**
-     * Reads the current fixed transform of the first underlying
+     * Reads the fixed (committed) transform of the first underlying
      * {@link TransformedSource} in a {@link BvvStackSource}.
+     * Used by {@link #syncTransforms()} and {@link #getLeaderTransform}.
      */
     private static void getSourceTransform(final BvvStackSource<?> source,
                                            final AffineTransform3D result) {
         final List<? extends SourceAndConverter<?>> sacs = source.getSources();
         if (sacs == null || sacs.isEmpty()) return;
-        final Object spim = sacs.get(0).getSpimSource();
-        if (spim instanceof TransformedSource<?> ts) {
+        final Object spim = sacs.getFirst().getSpimSource();
+        if (spim instanceof TransformedSource<?> ts)
             ts.getFixedTransform(result);
-        }
     }
 
     /**
